syntax = "proto3";

package sc.external.services.configuration.v1;

service ConfigService {
  rpc QueryConfig (ConfigRequest) returns (ConfigResponse);
  rpc WatchConfig (ConfigWatchRequest) returns (stream ConfigResponse);
}

message ConfigRequest {
  string service_name = 1;
  string environment = 2;
  string client_version = 3;
}

message ConfigResponse {
  string config_data = 1;
  string version = 2;
  bool success = 3;
  map<string, string> endpoints = 4;
  map<string, string> features = 5;
}

message ConfigWatchRequest {
  string service_name = 1;
  string environment = 2;
  int32 poll_interval = 3;
}
